--- a/frontend/src/components/AuthTemplate/AuthTemplate.css
+++ b/frontend/src/components/AuthTemplate/AuthTemplate.css
@@ -1,4 +1,12 @@
-.AuthCard {
+.AuthTemplate {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.AuthTemplate__card {
     border-radius: 12px;
     background-color: var(--tertiary-color);
     border: 1px solid var(--dark-grey-color);
@@ -6,7 +14,7 @@
     min-width: 300px;
 }
 
-.AuthCard__title {
+.AuthTemplate__title {
     color: var(--dark-grey-color);
     font-size: 26px;
     font-weight: 600;
