--- a/frontend/src/components/CustomTextInput/CustomTextInput.css
+++ b/frontend/src/components/CustomTextInput/CustomTextInput.css
@@ -1,7 +1,3 @@
-.CustomTextInput {
-    padding-bottom: 8px;
-}
-
 .CustomTextInput__label {
     display: block;
     padding-bottom: 4px;
@@ -24,9 +20,15 @@
     border: 1px solid var(--primary-color-accent);
 }
 
+.CustomTextInput__input_error,
+.CustomTextInput__input_error:focus {
+    border: 1px solid var(--danger-color);
+}
+
 .CustomTextInput__error {
     display: block;
     padding-top: 2px;
     font-size: 10px;
     color: var(--danger-color);
+    min-height: 14px;
 }
