--- a/frontend/src/components/AuthTemplate/AuthTemplate.css
+++ b/frontend/src/components/AuthTemplate/AuthTemplate.css
@@ -9,14 +9,23 @@
 .AuthTemplate__card {
     border-radius: 12px;
     background-color: var(--tertiary-color);
-    border: 1px solid var(--dark-grey-color);
+    border: 1px solid var(--primary-color-accent);
     padding: 18px;
-    min-width: 300px;
+    width: 100%;
+    margin: 0 12px;
 }
 
 .AuthTemplate__title {
-    color: var(--dark-grey-color);
+    color: var(--secondary-color);
     font-size: 26px;
     font-weight: 600;
     padding-bottom: 12px;
+}
+
+@media screen and (min-width: 320px) {
+    .AuthTemplate__card {
+        width: auto;
+        min-width: 300px;
+        margin: 0;
+    }
 }
