--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 :root {
   --light-grey-color: rgb(253, 253, 253);
   --grey-color: #bfbfbf;
   --dark-grey-color: #1f1f1f;
-  --primary-color: #AA96DA;
-  --primary-color-accent: #9373dc;
-  --secondary-color: #C5FAD5;
-  --tertiary-color: #FFFFD2;
+  --primary-color: #07e000;
+  --primary-color-accent: #09ff00;
+  --secondary-color: #ffffff;
+  --tertiary-color: #2a2a2a;
   --danger-color: #FF0000;
 
   --field-border-radius: 4px;
@@ -22,9 +13,13 @@ body {
 
 * {
   box-sizing: border-box;
+  font-family: monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: monospace;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--tertiary-color);
 }
