--- a/frontend/src/components/AuthTemplate/AuthTemplate.css
+++ b/frontend/src/components/AuthTemplate/AuthTemplate.css
@@ -7,10 +7,10 @@
 }
 
 .AuthTemplate__card {
-    border-radius: 12px;
+    border-radius: var(--card-border-radius);
     background-color: var(--tertiary-color);
     border: 1px solid var(--primary-color-accent);
-    padding: 18px;
+    padding: var(--card-padding);
     width: 100%;
     margin: 0 12px;
 }
