--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,10 @@ body {
   background-color: var(--tertiary-color);
   color: var(--secondary-color);
 }
+
+#root {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  flex-direction: column;
+}
