Working on the main page

--- a/frontend/src/components/MainPageCard/MainPageCard.css
+++ b/frontend/src/components/MainPageCard/MainPageCard.css
@@ -1,4 +1,5 @@
 .MainPageCard {
+    flex: 1;
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     border: 1px solid var(--primary-color-accent);
