Working on main page

--- a/frontend/src/pages/MainPage/MainPage.css
+++ b/frontend/src/pages/MainPage/MainPage.css
@@ -7,7 +7,12 @@
 }
 
 .MainPage__title {
-    font-size: 48px;
+    font-size: 44px;
+}
+
+.MainPage__title_accent {
+    font-size: 52px;
+    color: var(--primary-color);
 }
 
 .MainPage__CardGroup {
