--- a/frontend/src/components/ButtonSet/ButtonSet.css
+++ b/frontend/src/components/ButtonSet/ButtonSet.css
@@ -1,3 +1,10 @@
 .ButtonSet {
     padding: 8px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.ButtonSet_horizontal {
+    flex-direction: row;
 }
