--- a/frontend/src/components/CustomButton/CustomButton.css
+++ b/frontend/src/components/CustomButton/CustomButton.css
@@ -34,3 +34,12 @@
     color: var(--primary-color-accent);
     border-color: var(--primary-color-accent);
 }
+
+.CustomButton_cancel {
+    color: var(--danger-color);
+    border: 1px solid var(--danger-color);
+}
+
+.CustomButton_cancel:focus, .CustomButton_cancel:hover {
+    background-color: var(--dark-grey-color);
+}
