--- a/frontend/src/components/CustomTextInput/CustomTextInput.css
+++ b/frontend/src/components/CustomTextInput/CustomTextInput.css
@@ -14,6 +14,20 @@
     color: var(--secondary-color);
 }
 
+.CustomTextInput_lSize .CustomTextInput__label {
+    color: var(--light-grey-color);
+    font-size: 22px;
+}
+
+.CustomTextInput_lSize .CustomTextInput__input {
+    font-size: 32px;
+}
+
+.CustomTextInput__input_noBorder {
+    border-color: transparent;
+    padding-left: 0;
+}
+
 .CustomTextInput__input::placeholder {
     color: var(--grey-color)
 }
