Added director card

--- a/frontend/src/components/ResourceCard/ResourceCard.css
+++ b/frontend/src/components/ResourceCard/ResourceCard.css
@@ -1,4 +1,4 @@
-.MovieForm {
+.ResourceCard {
     margin: 90px auto 0;
     max-width: 400px;
     border: 1px solid var(--primary-color-accent);
@@ -6,7 +6,7 @@
     padding: var(--card-padding);
 }
 
-.MovieForm__title {
+.ResourceCard__title {
     font-size: 38px;
     color: white;
     text-shadow: var(--primary-color) 1px 1px 4px;
