--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
   --secondary-color: #ffffff;
   --tertiary-color: #2a2a2a;
   --danger-color: #FF0000;
+  --superuser-color: #ffea00;
 
   --field-border-radius: 4px;
   --card-padding: 18px;
