Minor adjustments to focus and hover styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --light-grey-color: rgb(253, 253, 253);
   --dark-grey-color: #1f1f1f;
-  --primary-color: #07e000;
+  --primary-color: #09d600;
   --primary-color-accent: #09ff00;
   --secondary-color: #ffffff;
   --tertiary-color: #2a2a2a;
