--- a/frontend/src/components/AppHeader/AppHeader.css
+++ b/frontend/src/components/AppHeader/AppHeader.css
@@ -12,6 +12,7 @@
 }
 
 .AppHeader__title {
+    color: var(--secondary-color);
     font-size: 26px;
 }
 
@@ -19,7 +20,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     font-size: 16px;
-    color: var(--primary-color)
+    color: var(--primary-color-accent)
 }
 
 
