--- a/frontend/src/components/CustomTable/CustomTable.css
+++ b/frontend/src/components/CustomTable/CustomTable.css
@@ -15,7 +15,7 @@ thead tr th:first-child {
 }
 
 .CustomTable th {
-    color: var(--primary-color);
+    color: var(--primary-color-accent);
 }
 
 .CustomTable tr {
@@ -50,18 +50,18 @@ thead tr th:first-child {
 .SortingRow__option {
     padding: 6px 8px;
     border-radius: 10px;
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--primary-color-accent);
 }
 
 .SortingRow__option_active {
-    cursor: pointer;
     background-color: var(--primary-color-accent);
     color: var(--dark-grey-color);
 }
-.SortingRow__option:focus, .SortingRow__option:hover {
+
+.SortingRow__option:not(.SortingRow__option_active):focus, 
+.SortingRow__option:not(.SortingRow__option_active):hover {
     cursor: pointer;
-    background-color: var(--primary-color);
-    color: var(--dark-grey-color);
+    color: var(--primary-color-accent);
 }
 
 .CustomTable__TableSubstitute_centered {
